    bootstrap.sh, used to build $(bjam).  Thanks to Andreas Ferber for the
    report and astute analysis.  Closes: #545535.  Put the "-mt"
    decoration before the final suffix for compatibility symlinks.
    Closes: #545773.

  * [Merge from 1.39.0-5] patches/boost-test-invalid-read.patch: New.  Fix
    invalid read error detected by valgrind.  Closes: #538946.

 -- Steve M. Robbins <smr@debian.org>  Sat, 03 Oct 2009 22:51:20 -0500

boost1.40 (1.40.0-1) unstable; urgency=low

  * New upstream.  Version string updates to control & rules.  File list
    updates to example-files & documentation-files.
    - patches/python-enum-same-value.patch:
    - patches/python-generic-call.patch:
    - patches/bootstrap.patch:
    - patches/mpi-python.patch:
    - patches/boost_python_translate_exception.patch:
    - patches/wave-cpp.patch:
    - patches/function-template.patch: Remove.  Applied upstream.
  
  * NEWS.Debian: Reformat to follow guidelines in Debian Developer's
    Reference, Section 6.3.4.

  * control: New package libboost1.40-all-dev that brings in all the Boost
    -dev packages (c.f. #537739).

 -- Steve M. Robbins <smr@debian.org>  Sat, 05 Sep 2009 13:40:38 -0500

boost1.39 (1.39.0-4) unstable; urgency=low

  * rules: Create libboostX-mt.so compatibility symlinks.  Closes:
    #541133.  See NEWS.Debian for more details.

 -- Steve M. Robbins <smr@debian.org>  Sun, 30 Aug 2009 14:47:14 -0500

boost1.39 (1.39.0-3) unstable; urgency=low

  * patches/mips-asm.patch: New.  Fix build failure on mips (thanks,
    Florian Lohoff).  Closes: #543975.
  
  * control: Package -mpi-dev suggests -graph-dev.  Closes: #542067.  Note
    that -dev now contains inspect, boostbook and quickbook.  Add
    ${misc:Depends} to each package.
  
  * rules: Install manpages for inspect and quickbook.  Override lintian
    warning about license file in -dev (boostbook/xsl/caramel/LICENSE).
  
  * README.source: New.  Point to /usr/share/doc/quilt/README.source.
